--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL="mysql://USER:PASSWORD@localhost:3306/erp"
-PORT=3001
+DATABASE_URL="mysql://erpuser:123456@apps_databases-erp:3306/erp"
+PORT=3306
