--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "seed": "node seed.js"
   },
   "dependencies": {
     "express": "^4.18.2",
