--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "prisma": "^5.8.0",
     "@prisma/client": "^5.8.0",
     "mysql2": "^3.6.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0"
   }
 }
